testdata/parser/negative/9.pdl
#version 100

// node declaration deeply nested in primitive
primitive main(in a, out b) {
	while (true) {
		channel yo -> yi;
		skip;
	}
}
